fix layout and font issues

--- a/Quiz.html
+++ b/Quiz.html
@@ -6,12 +6,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz</title>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="Quiz.css"/>
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
 <script id="applicationScript" type="text/javascript" src="Quiz.js"></script>
 </head>
 <body>
 <div id="Quiz">
 	<div id="I_Am_Not_Feeling_Well_">
-		<span>I Am Not Feeling Well!</span>
+		<h2>I Am Not Feeling Well!</h12>
 	</div>
 	<a href="#mind_q" id="mind_button">
 		<svg class="___55">
@@ -63,7 +66,7 @@
 			</div>
 		</div>
 		<div id="Something_unusual_is_going_on_">
-			<span>Something unusual is going on in my mind…</span>
+			<h5>Something unusual is going on in my mind…</h5>
 		</div>
 	</a>
 	<a href="#body_q" id="body_button">
@@ -194,7 +197,7 @@
 			</div>
 		</div>
 		<div id="My_body_is_uncomfortable__I_do">
-			<span>My body is uncomfortable, I don’t feel completely healthy</span>
+			<h5>My body is uncomfortable, I don’t feel completely healthy</h5>
 		</div>
 	</a>
 	<a href="index.html" id="home_botton">
@@ -240,7 +243,7 @@
 				</rect>
 			</svg>
 			<svg class="___70">
-				<rect fill="rgba(255,229,229,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___70" rx="30.5" ry="30.5" x="0" y="0" width="178" height="61">
+				<rect fill="rgba(255,229,229,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___70" rx="30.5" ry="30.5" x="0" y="0" width="200" height="61">
 				</rect>
 			</svg>
 		</div>
@@ -295,28 +298,28 @@
 			</svg>
 		</div>
 		<div id="I_Feel_">
-			<span>I Feel…</span>
+			<h2 style="color: white">I Feel…</h2>
 		</div>
 		<div id="Scared">
-			<span>Scared</span>
+			<h5>Scared</h5>
 		</div>
 		<div id="Confused">
-			<span>Confused</span>
+			<h5>Confused</h5>
 		</div>
 		<div id="Sad">
-			<span>Sad</span>
+			<h5>Sad</h5>
 		</div>
 		<div id="Anxious">
-			<span>Anxious</span>
+			<h5>Anxious</h5>
 		</div>
 		<div id="Angry">
-			<span>Angry</span>
+			<h5>Angry</h5>
 		</div>
 		<div id="Or__it_s_something_else_">
-			<span>Or… it’s something else?</span>
+			<h5 style="color: white">Or… it’s something else?</h5>
 		</div>
 		<div id="Let_us_help_">
-			<span>Let us help!</span>
+			<h5>Let us help!</h5>
 		</div>
 		<svg class="___68">
 			<rect fill="rgba(250,250,250,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___68" rx="22" ry="22" x="0" y="0" width="367" height="44">
@@ -333,7 +336,7 @@
 			</svg>
 		</div>
 		<div id="Bored">
-			<span>Bored</span>
+			<h5>Bored</h5>
 		</div>
 	</div>
 	<div id="mind_a">
@@ -784,16 +787,16 @@
 			</svg>
 		</div>
 		<div id="I_am_Scared_or_Confused">
-			<span>I am Scared or Confused</span>
+			<h2>I am Scared or Confused</h2>
 		</div>
 		<div id="It_is_totally_normal_to_feel_t">
-			<span>It is totally normal to feel this way! This is a Global Pandemic that is affecting EVERYONE in the world. You might not know too much about the virus or what is happening, leading to fear and confusion.<br/><br/>Know that children are likely to exhibit more mild symptoms, there is no need to freak out, but we HAVE TO BE CAREFUL<br/><br/>You HAVE THE POWER to do the right things and stay informed to keep you and your loved ones safe! Washing your hands often and staying at home are both extremely effective ways to keep the virus away.</span>
+			<h5>It is totally normal to feel this way! This is a Global Pandemic that is affecting EVERYONE in the world. You might not know too much about the virus or what is happening, leading to fear and confusion.<br/><br/>Know that children are likely to exhibit more mild symptoms, there is no need to freak out, but we HAVE TO BE CAREFUL<br/><br/>You HAVE THE POWER to do the right things and stay informed to keep you and your loved ones safe! Washing your hands often and staying at home are both extremely effective ways to keep the virus away.</h5>
 		</div>
 		<div id="I_am_Sad_or_Anxious">
-			<span>I am Sad or Anxious</span>
+			<h2>I am Sad or Anxious</h2>
 		</div>
 		<div id="It_is_totally_normal_to_feel_t_hj">
-			<span>It is totally normal to feel this way too! You are not seeing your friends or going to school and you might not know what exactly you can do to help the situation.<br/><br/>But there is a lot that you can do! </span><br>
+			<h5>It is totally normal to feel this way too! You are not seeing your friends or going to school and you might not know what exactly you can do to help the situation.<br/><br/>But there is a lot that you can do! </h5><br>
 		</div>
 		<svg class="Icon_awesome_arrow_right" viewBox="0 2.647 31.504 30.705">
 			<path fill="rgba(248,170,170,1)" stroke="rgba(0,0,0,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Icon_awesome_arrow_right" d="M 13.39453125 4.703906059265137 L 14.95546913146973 3.142968654632568 C 15.61640644073486 2.482031106948853 16.68515586853027 2.482031106948853 17.33906364440918 3.142968654632568 L 31.0078125 16.8046875 C 31.66875076293945 17.46562576293945 31.66875076293945 18.53437423706055 31.0078125 19.18828201293945 L 17.33906173706055 32.85703277587891 C 16.67812347412109 33.51797103881836 15.60937404632568 33.51797103881836 14.95546817779541 32.85703277587891 L 13.39453029632568 31.29609489440918 C 12.72656154632568 30.62812614440918 12.74062442779541 29.53828239440918 13.42265510559082 28.88437652587891 L 21.89531326293945 20.8125 L 1.6875 20.8125 C 0.7523437738418579 20.8125 0 20.06015586853027 0 19.125 L 0 16.875 C 0 15.93984413146973 0.7523437738418579 15.1875 1.6875 15.1875 L 21.89531326293945 15.1875 L 13.42265605926514 7.115624904632568 C 12.73359394073486 6.461718559265137 12.71953105926514 5.371874809265137 13.39453125 4.703906059265137 Z">
@@ -922,7 +925,7 @@
 			</svg>
 		</div>
 		<div id="Checkout_more_of_our_resources">
-			<span>Checkout more of our resources</span>
+			<h5>Checkout more of our resources</h5>
 		</div>
 		<div id="__205">
 			<svg class="___69_il">
@@ -935,19 +938,19 @@
 			</svg>
 		</div>
 		<div id="Talk_to_an_expert_">
-			<span>Talk to an expert!</span>
+			<h5>Talk to an expert!</h5>
 		</div>
 		<div id="I_am_Angry">
-			<span>I am Angry</span>
+			<h2>I am Angry</h2>
 		</div>
 		<div id="Despite_what_you_might_be_hear">
-			<span>Despite what you might be hearing, it is NO BODY’s FAULT that this is happening. It is NOT HELPFUL at all to put blame on anyone. The best we can do it take care of ourselves and do the best to help others! Stay positive and know that we are going to get through this!</span>
+			<h5>Despite what you might be hearing, it is NO BODY’s FAULT that this is happening. It is NOT HELPFUL at all to put blame on anyone. The best we can do it take care of ourselves and do the best to help others! Stay positive and know that we are going to get through this!</h5>
 		</div>
 		<div id="I_am_Bored">
-			<span>I am Bored</span>
+			<h2>I am Bored</h2>
 		</div>
 		<div id="Now_everyone_is_staying_at_hom">
-			<span>Now everyone is staying at home, it is a great time to do or learn something you have always been interested in, just for the sake of it! Here are some ideas:<br/></span><br>
+			<h5>Now everyone is staying at home, it is a great time to do or learn something you have always been interested in, just for the sake of it! Here are some ideas:<br/></h5><br>
 		</div>
 		<svg class="Icon_awesome_arrow_right_is" viewBox="0 2.647 31.504 30.705">
 			<path fill="rgba(248,170,170,1)" stroke="rgba(0,0,0,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Icon_awesome_arrow_right_is" d="M 13.39453125 4.703906059265137 L 14.95546913146973 3.142968654632568 C 15.61640644073486 2.482031106948853 16.68515586853027 2.482031106948853 17.33906364440918 3.142968654632568 L 31.0078125 16.8046875 C 31.66875076293945 17.46562576293945 31.66875076293945 18.53437423706055 31.0078125 19.18828201293945 L 17.33906173706055 32.85703277587891 C 16.67812347412109 33.51797103881836 15.60937404632568 33.51797103881836 14.95546817779541 32.85703277587891 L 13.39453029632568 31.29609489440918 C 12.72656154632568 30.62812614440918 12.74062442779541 29.53828239440918 13.42265510559082 28.88437652587891 L 21.89531326293945 20.8125 L 1.6875 20.8125 C 0.7523437738418579 20.8125 0 20.06015586853027 0 19.125 L 0 16.875 C 0 15.93984413146973 0.7523437738418579 15.1875 1.6875 15.1875 L 21.89531326293945 15.1875 L 13.42265605926514 7.115624904632568 C 12.73359394073486 6.461718559265137 12.71953105926514 5.371874809265137 13.39453125 4.703906059265137 Z">
@@ -1078,7 +1081,7 @@
 			</svg>
 		</div>
 		<div id="Learn_how_to_cook_">
-			<span>Learn how to cook!</span>
+			<h5>Learn how to cook!</h5>
 		</div>
 		<div id="ID145_paint_palette_1">
 			<svg class="___1087" viewBox="96.868 90.705 60.651 63.019">
@@ -1171,22 +1174,22 @@
 			</div>
 		</div>
 		<div id="Checkout_more_ideas_and_resour">
-			<span>Checkout more ideas and resources</span>
+			<h5>Checkout more ideas and resources</h5>
 		</div>
 		<div id="Learn_how_to_draw_paint">
-			<span>Learn how to draw/paint</span>
+			<h5>Learn how to draw/paint</h5>
 		</div>
 		<div id="Read_a_good_book">
-			<span>Read a good book</span>
+			<h5>Read a good book</h5>
 		</div>
 		<div id="Connect_with_your_friends_onli">
-			<span>Connect with your friends online!</span>
+			<p>Connect with your friends online!</p>
 		</div>
 		<div id="If_possible__take_a_walk_outsi">
-			<span>If possible, take a walk outside/in nature</span>
+			<p>If possible, take a walk outside/in nature</p>
 		</div>
 		<div id="Spend_quality_time_with_your_f">
-			<span>Spend quality time with your family and pets!</span>
+			<p>Spend quality time with your family and pets!</p>
 		</div>
 	</div>
 	<div id="body_q">
@@ -1195,7 +1198,7 @@
 			</rect>
 		</svg>
 		<div id="I_Have_A_">
-			<span>I Have A…</span>
+			<h2 style="color: white">I Have A…</h2>
 		</div>
 		<div id="__159">
 			<svg class="___69_ko">
@@ -1248,19 +1251,19 @@
 			</svg>
 		</div>
 		<div id="Headache">
-			<span>Headache</span>
+			<h5>Headache</h5>
 		</div>
 		<div id="Stomach_Ache">
-			<span>Stomach Ache</span>
+			<h5>Stomach Ache</h5>
 		</div>
 		<div id="Sore_Throat">
-			<span>Sore Throat</span>
+			<h5>Sore Throat</h5>
 		</div>
 		<div id="Runny_Nose">
-			<span>Runny Nose</span>
+			<h5>Runny Nose</h5>
 		</div>
 		<div id="Sneezes">
-			<span>Sneezes</span>
+			<h5>Sneezes</h5>
 		</div>
 		<div id="__164">
 			<svg class="___69_la">
@@ -1273,7 +1276,7 @@
 			</svg>
 		</div>
 		<div id="Fever">
-			<span>Fever</span>
+			<h5>Fever</h5>
 		</div>
 		<div id="__165">
 			<svg class="___69_lc">
@@ -1286,7 +1289,7 @@
 			</svg>
 		</div>
 		<div id="Muscle_Aches">
-			<span>Muscle Aches</span>
+			<h5>Muscle Aches</h5>
 		</div>
 		<div id="ID028_infected">
 			<svg class="___833" viewBox="130.614 250.893 85.877 45.922">
@@ -1575,10 +1578,10 @@
 			</div>
 		</div>
 		<div id="Let_your_parents_or_an_adult_k">
-			<span>Let your parents or an adult know immediately!</span>
+			<h3 style="color: white">Let your parents or an adult know immediately!</h3>
 		</div>
 		<div id="More_resources_coming_soon__">
-			<span>More resources coming soon…</span><br>
+			<h3 style="color: white">More resources coming soon…</h3><br>
 		</div>
 	</div>
 	<a href="index.html" id="home_botton_nl">
