--- a/Wash_Hands.html
+++ b/Wash_Hands.html
@@ -6,12 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Wash Hands</title>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="Wash_Hands.css"/>
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
+
 <script id="applicationScript" type="text/javascript" src="Wash_Hands.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <div id="Wash_Hands">
 	<div id="Washing_Your_Hands">
-		<span>Washing Your Hands</span>
+		<h1>Washing Your Hands</h1>
 	</div>
 	<div id="quiz_button" class="quiz_button">
 		<svg class="___1582" viewBox="0 0 508 114">
@@ -19,7 +23,7 @@
 			</path>
 		</svg>
 		<div id="Take_the_Quiz">
-			<span>Take the Quiz</span>
+			<h3>Take the Quiz</h3>
 		</div>
 	</div>
 	<a href="#how_block" id="how_button">
@@ -32,7 +36,7 @@
 			</rect>
 		</svg>
 		<div id="HOW_to_do_it_correctly">
-			<span>HOW to do it correctly</span>
+			<h4>HOW to do it correctly</h4>
 		</div>
 	</a>
 	<a href="#why_block" id="why_button">
@@ -45,7 +49,7 @@
 			</rect>
 		</svg>
 		<div id="WHY_is_it_so_important_">
-			<span>WHY is it so important?</span>
+			<h4>WHY is it so important?</h4>
 		</div>
 	</a>
 	<a href="#when_block" id="when_button">
@@ -58,7 +62,7 @@
 			</rect>
 		</svg>
 		<div id="WHEN_should_I_wash_my_hands">
-			<span>WHEN should I wash my hands</span>
+			<h4>WHEN should I wash my hands</h4>
 		</div>
 	</a>
 	<div id="when_block">
@@ -83,25 +87,25 @@
 			</path>
 		</svg>
 		<div id="WHEN_">
-			<span>WHEN?</span>
+			<h2 style="color: white">WHEN?</h2>
 		</div>
 		<div id="You_are_dealing_with_food_">
-			<span>You are dealing with food…</span>
+			<h3>You are dealing with food…</h3>
 		</div>
 		<div id="Before__during__and_after_prep">
-			<span>Before, during, and after preparing food</span>
+			<h4>Before, during, and after preparing food</h4>
 		</div>
 		<div id="You_were_near_someone_that_is_">
-			<span>You were near someone that is sick…</span>
+			<h3>You were near someone that is sick…</h3>
 		</div>
 		<div id="You_just_">
-			<span>You just…</span>
+			<h3>You just…</h3>
 		</div>
 		<div id="Before_and_after_caring_for_so">
-			<span>Before and after caring for someone at home who is sick with vomiting or diarrhea<br/></span><br>
+			<h4>Before and after caring for someone at home who is sick with vomiting or diarrhea<br/></h4><br>
 		</div>
 		<div id="Went_to_the_public">
-			<span>Went to the public</span>
+			<h4>Went to the public</h4>
 		</div>
 		<div id="ID001_washing_hands">
 			<svg class="___242" viewBox="0 0.001 143.345 152.832">
@@ -136,7 +140,7 @@
 			</div>
 		</div>
 		<div id="Before_eating_food">
-			<span>Before eating food</span>
+			<h4>Before eating food</h4>
 		</div>
 		<div id="cooking">
 			<div id="__25">
@@ -339,7 +343,7 @@
 			</div>
 		</div>
 		<div id="Before_and_after_treating_a_cu">
-			<span>Before and after treating a cut or wound</span><br>
+			<h4>Before and after treating a cut or wound</h4><br>
 		</div>
 		<div id="ID012_dogs">
 			<svg class="___387" viewBox="286.906 0 56.837 44.242">
@@ -698,16 +702,16 @@
 			</svg>
 		</div>
 		<div id="Used_the_toilet">
-			<span>Used the toilet</span>
+			<h4>Used the toilet</h4>
 		</div>
 		<div id="Blew_your_nose__coughed_or_sne">
-			<span>Blew your nose, coughed or sneezed</span><br>
+			<h4>Blew your nose, coughed or sneezed</h4><br>
 		</div>
 		<div id="Touched_your_pet__pet_food__or">
-			<span>Touched your pet, pet food, or pet waste</span><br>
+			<h4>Touched your pet, pet food, or pet waste</h4><br>
 		</div>
 		<div id="Touched_garbage_or_garbage_bag">
-			<span>Touched garbage or garbage bags</span><br>
+			<h4>Touched garbage or garbage bags</h4><br>
 		</div>
 		<div id="cough">
 			<svg class="___95">
@@ -826,14 +830,14 @@
 			</path>
 		</svg>
 		<div id="You_should_not_go_to_the_publi">
-			<span>You should not go to the public, unless for emergencies or to get groceries!</span>
+			<p>You should not go to the public, unless for emergencies or to get groceries!</p>
 		</div>
 		<svg class="___494" viewBox="-26.345 0 521.345 99.515">
 			<path fill="rgba(250,194,139,0.776)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___494" d="M 39 0 L 456 0 C 477.5390930175781 0 495 17.46089363098145 495 39 C 495 60.53910827636719 477.5390930175781 78 456 78 L 39 78 C 35.16363525390625 78 26.56703948974609 75.5953369140625 18.14506721496582 69.81915283203125 C 15.89700889587402 68.27801513671875 -26.344970703125 99.5150146484375 -26.344970703125 99.5150146484375 C -26.344970703125 99.5150146484375 7.279330730438232 59.60803985595703 5.531742095947266 56.80283355712891 C 2.576528072357178 52.06179809570312 0.4293317794799805 46.08284378051758 0 39 C 0 17.46089363098145 17.46089363098145 0 39 0 Z">
 			</path>
 		</svg>
 		<div id="Wash_your_hands_after_using_th">
-			<span>Wash your hands after using the toilet in any circumstance!</span>
+			<p>Wash your hands after using the toilet in any circumstance!</p>
 		</div>
 		<div id="ID017_bin">
 			<svg class="___781" viewBox="8.997 8.992 170.988 171.007">
@@ -910,7 +914,7 @@
 			</rect>
 		</svg>
 		<div id="Follow_this_video_to_wash_your">
-			<span>Follow this video to wash your hands!</span>
+			<h3>Follow this video to wash your hands!</h3>
 		</div>
 		<svg class="___33">
 			<rect fill="rgba(7,7,7,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___33" rx="136" ry="136" x="0" y="0" width="881" height="472">
@@ -929,10 +933,10 @@
 			</rect>
 		</svg>
 		<div id="HOW_">
-			<span>HOW?</span>
+			<h2 style="color: white">HOW?</h2>
 		</div>
 		<div id="Think_of_the_red_ink_as_the_vi">
-			<span>Think of the red ink as the virus, how should you wash your hands to get it all off?</span>
+			<h4>Think of the red ink as the virus, how should you wash your hands to get it all off?</h4>
 		</div>
 	</div>
 	<div id="why_block">
@@ -945,19 +949,19 @@
 			</rect>
 		</svg>
 		<div id="WHY_">
-			<span>WHY?</span>
+			<h3>WHY?</h3>
 		</div>
 		<div id="__212">
 			<svg class="___70">
-				<rect fill="rgba(248,170,170,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___70" rx="61" ry="61" x="0" y="0" width="355" height="122">
+				<rect fill="rgba(248,170,170,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___70" rx="61" ry="61" x="0" y="0" width="355" height="140">
 				</rect>
 			</svg>
 		</div>
 		<div id="Talk_to_an_expert_">
-			<span>Talk to an expert!</span>
+			<h3>Talk to an expert!</h3>
 		</div>
 		<div id="More_information_coming_">
-			<span>More information coming…</span>
+			<h3>More information coming…</h3>
 		</div>
 	</div>
 	<a href="index.html" id="home_botton_h">
