--- a/What_Can_I_do.html
+++ b/What_Can_I_do.html
@@ -6,12 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>What Can I do</title>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="What_Can_I_do.css"/>
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
+
 <script id="applicationScript" type="text/javascript" src="What_Can_I_do.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <div id="What_Can_I_do">
 	<div id="What_Can_I_do_">
-		<span>What Can I do?</span>
+		<h1>What Can I do?</h1>
 	</div>
 	<a href="index.html" id="home_botton">
 		<div id="__61">
@@ -38,7 +42,7 @@
 
 	<div id="self_block">
 		<svg class="___19">
-			<rect fill="rgba(255,247,216,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___19" rx="0" ry="0" x="0" y="0" width="1280" height="1143">
+			<rect fill="rgba(255,247,216,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___19" rx="0" ry="0" x="0" y="0" width="1280" height="1200">
 			</rect>
 		</svg>
 		<svg class="___729" viewBox="1368.475 368.779 1281.946 473.46">
@@ -61,13 +65,13 @@
 				</div>
 		</div>
 		<div id="Yourself">
-			<span>Yourself</span>
+			<h3>Yourself</h3>
 		</div>
 		<div id="Take_care_of">
-			<span>Take care of</span>
+			<h2>Take care of</h2>
 		</div>
 		<div id="Your_Mind">
-			<span>Your Mind</span>
+			<h3>Your Mind</h3>
 		</div>
 		<div id="ID008_creativity">
 			<svg class="___639" viewBox="55.215 33.887 32.964 33.818">
@@ -452,19 +456,19 @@
 			</svg>
 		</div>
 		<svg class="___39">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___39" rx="38" ry="38" x="0" y="0" width="352" height="130">
+			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___39" rx="38" ry="38" x="0" y="0" width="352" height="150">
 			</rect>
 		</svg>
 		<svg class="___40">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___40" rx="38" ry="38" x="0" y="0" width="354" height="133">
+			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___40" rx="38" ry="38" x="0" y="0" width="354" height="150">
 			</rect>
 		</svg>
 		<svg class="___41">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___41" rx="38" ry="38" x="0" y="0" width="352" height="126">
+			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___41" rx="38" ry="38" x="0" y="0" width="352" height="180">
 			</rect>
 		</svg>
 		<svg class="___42">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___42" rx="38" ry="38" x="0" y="0" width="352" height="134">
+			<rect fill="rgba(255,255,255,1)" stroke="rgba(112,112,112,0)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="___42" rx="38" ry="38" x="0" y="0" width="352" height="150">
 			</rect>
 		</svg>
 		<svg class="___43">
@@ -472,31 +476,31 @@
 			</rect>
 		</svg>
 		<div id="The_easiest_and_most_effective">
-			<span>The easiest and most effective way to protect you and your loved ones from the virus</span>
+			<p>The easiest and most effective way to protect you and your loved ones from the virus</p>
 		</div>
 		<div id="Exercise">
-			<span>Exercise</span>
+			<h4>Exercise</h4>
 		</div>
 		<div id="Creative_Projects">
-			<span>Creative Projects</span>
+			<h4>Creative Projects</h4>
 		</div>
 		<div id="Meditate">
-			<span>Meditate</span>
+			<h4>Meditate</h3>
 		</div>
 		<div id="Connect_Online">
-			<span>Connect Online</span>
+			<h4>Connect Online</h4>
 		</div>
 		<div id="Wash_Your_Hands">
-			<span>Wash Your Hands</span>
+			<h4>Wash Your Hands</h4>
 		</div>
 		<div id="Do_yoga__stretch__or_go_for_a_">
-			<span>Do yoga, stretch, or go for a walk/jog where there are not many people around!</span>
+			<p>Do yoga, stretch, or go for a walk/jog where there are not many people around!</p>
 		</div>
 		<div id="Learn_something_new__or_do_som">
-			<span>Learn something new, or do something you have always wanted to do!</span>
+			<p>Learn something new, or do something you have always wanted to do!</p>
 		</div>
 		<div id="Breathe_and_relax__It_will_red">
-			<span>Breathe and relax! It will reduce your anxiety and make you feel a lot better</span>
+			<p>Breathe and relax! It will reduce your anxiety and make you feel a lot better</p>
 		</div>
 		<div id="__88">
 			<div id="__91">
@@ -524,11 +528,8 @@
 				</svg>
 			</div>
 		</div>
-		<div id="Feeling_Funny__Let_us_help_">
-			<span>Feeling Funny? Let us help!</span>
-		</div>
 		<div id="It_might_be_hard_not_seeing_yo">
-			<span>It might be hard not seeing your friends, but you can always call them on the phone, through Skype or Google Hangouts!</span>
+			<p>It might be hard not seeing your friends, but you can always call them on the phone, through Skype or Google Hangouts!</p>
 		</div>
 		<div onclick="application.goToTargetView(event)" id="__188">
 			<svg class="___45">
@@ -615,7 +616,10 @@
 			</svg>
 		</div>
 		<div id="Your_Body">
-			<span>Your Body</span>
+			<h5>Your Body</h5>
+		</div>
+		<div id="Feeling_Funny__Let_us_help_">
+			<h4 style="color: white">Feeling Funny? Let us help!</h4>
 		</div>
 	</div>
 	<div id="others_block">
@@ -629,10 +633,10 @@
 				</svg>
 			</div>
 		<div id="Family___Others">
-			<span>Family & Others</span>
+			<h3>Family & Others</h3>
 		</div>
 		<div id="Take_care_of_hn">
-			<span>Take care of</span>
+			<h2>Take care of</h2>
 		</div>
 		<div id="ID031_grandparents">
 			<svg class="___1103" viewBox="0 0 220 220">
@@ -947,22 +951,22 @@
 			</svg>
 		</div>
 		<div id="Your_grandparents__or_older_pe">
-			<span>Your grandparents, or older people, are more likely to catch the virus and have severe symptoms. To protect them, the best way is to protect yourself from the virus and try your best to keep some physical distance (6 feet!), so that they cannot get if from you!</span>
+			<h5>Your grandparents, or older people, are more likely to catch the virus and have severe symptoms. To protect them, the best way is to protect yourself from the virus and try your best to keep some physical distance (6 feet!), so that they cannot get if from you!</h5>
 		</div>
 		<div id="Although_there_is_no_evidence_">
-			<span>Although there is no evidence so far that any animals has been sick because of COVID-19, we should still pay attention to hygiene like you normally would to protect yourself from germs around your pets, but be EXTRA CAREFUL! Pets should practice social distancing like people. They can catch and transmit the virus too!</span>
+			<h5>Although there is no evidence so far that any animals has been sick because of COVID-19, we should still pay attention to hygiene like you normally would to protect yourself from germs around your pets, but be EXTRA CAREFUL! Pets should practice social distancing like people. They can catch and transmit the virus too!</h5>
 		</div>
 		<div id="Older_People">
-			<span>Older People</span>
+			<h4>Older People</h4>
 		</div>
 		<div id="Animals_and_pets">
-			<span>Animals and pets</span>
+			<h4>Animals and pets</h4>
 		</div>
 		<div id="Social_Distancing">
-			<span>Social Distancing</span>
+			<h4>Social Distancing</h4>
 		</div>
 		<div id="You_might_have_heard_the_word_">
-			<span>You might have heard the word a lot! Basically the most effective way to stop the virus from spreading is for EVERYONE to stay home and avoid contact with others! Know that it is important to the whole world that you do not go outside to public spaces! Take the opportunity and spend quality time with love ones at home.</span>
+			<h5>You might have heard the word a lot! Basically the most effective way to stop the virus from spreading is for EVERYONE to stay home and avoid contact with others! Know that it is important to the whole world that you do not go outside to public spaces! Take the opportunity and spend quality time with love ones at home.</h5>
 		</div>
 	</div>
 	<div id="world_block">
@@ -995,10 +999,10 @@
 			</svg>
 		</div>
 		<div id="Stay_Informed">
-			<span>Stay Informed</span>
+			<h3>Stay Informed</h3>
 		</div>
 		<div id="Be_Curious_">
-			<span>Be Curious,</span>
+			<h2>Be Curious,</h2>
 		</div>
 		<div id="__215">
 			<div id="news">
@@ -1241,16 +1245,16 @@
 			</svg>
 		</div>
 		<div id="The_News">
-			<span>The News</span>
+			<h4>The News</h4>
 		</div>
 		<div id="The_Numbers">
-			<span>The Numbers</span>
+			<h4>The Numbers</h4>
 		</div>
 		<div id="The_Science">
-			<span>The Science</span>
+			<h4>The Science</h4>
 		</div>
 		<div id="It_is_important_to_get_accurat">
-			<span>It is important to get accurate information from credible news sources. Checkout our favorite ones:</span>
+			<h5>It is important to get accurate information from credible news sources. Checkout our favorite ones:</h5>
 		</div>
 		<div id="___2___3" class="___2___3">
 			<svg class="___25">
@@ -1258,7 +1262,7 @@
 				</rect>
 			</svg>
 			<div id="The_New_York_Times">
-				<span>The New York Times</span>
+				<h5 style="font-size: 20px"s>The New York Times</h5>
 			</div>
 		</div>
 		<div id="___2___4" class="___2___4">
@@ -1267,7 +1271,7 @@
 				</rect>
 			</svg>
 			<div id="CNN">
-				<span>CNN</span>
+				<h5>CNN</h5>
 			</div>
 		</div>
 		<div id="___2___5" class="___2___5">
@@ -1276,7 +1280,7 @@
 				</rect>
 			</svg>
 			<div id="WIRED">
-				<span>WIRED</span>
+				<h5>WIRED</h5>
 			</div>
 		</div>
 		<div id="___2___6" class="___2___6">
@@ -1285,11 +1289,11 @@
 				</rect>
 			</svg>
 			<div id="SmartNews">
-				<span>SmartNews</span>
+				<h5>SmartNews</h5>
 			</div>
 		</div>
 		<div id="Accurate_live_maps__graphs__an">
-			<span>Accurate live maps, graphs, and numbers:</span><br>
+			<h5>Accurate live maps, graphs, and numbers:</h5><br>
 		</div>
 		<div id="___2___7" class="___2___7">
 			<svg class="___25_mt">
@@ -1297,11 +1301,11 @@
 				</rect>
 			</svg>
 			<div id="Johns_Hopkins_Coronavirus_Reso">
-				<span>Johns Hopkins Coronavirus Resource Center</span>
+				<h5 style="font-size: 20px">Johns Hopkins Coronavirus Resource Center</h5>
 			</div>
 		</div>
 		<div id="Most_recent_research_on_the_vi">
-			<span>Most recent research on the virus:</span>
+			<h5>Most recent research on the virus:</h5>
 		</div>
 		<div id="___2___8" class="___2___8">
 			<svg class="___25_mx">
@@ -1309,7 +1313,7 @@
 				</rect>
 			</svg>
 			<div id="World_Health_Organization">
-				<span>World Health Organization</span>
+				<h5>World Health Organization</h5>
 			</div>
 		</div>
 	</div>
