--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="index.css"/>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="global.css"/>
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;400;300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
+
 <script id="applicationScript" type="text/javascript" src="server.js"></script>
 
 </head>
